--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <li class="menu-list-item"><a class="menu-list-link link" href="">Contacts</a></li>
           </ul>
         </nav>
+        <button class="mobile-menu" type="button">
+          <svg class="mobile-menu-icon" width="24" height="24" aria-label="mobile menu icon">
+            <use href="./images/icons.svg#menu-icon"></use>
+          </svg>
+        </button>
         <address class="head-address">
           <ul class="contact-list list">
             <li class="contact-list-item">
@@ -55,16 +60,16 @@
     <main class="main-info">
       <!--- Hero sections -->
 
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-align">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button button" type="button">Order now</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Benefits section -->
 
-      <section class="benefits">
+      <!-- <section class="benefits">
         <div class="container benefits-container">
           <h2 class="benefit-title visually-hidden">Benefits</h2>
           <ul class="benefits-list list">
@@ -118,11 +123,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Team section -->
 
-      <section class="team">
+      <!-- <section class="team">
         <div class="container team-align">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
@@ -301,11 +306,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Section portfolio-->
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container portfolio-align">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list list">
@@ -426,12 +431,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--Footer-->
 
-    <footer class="page-footer">
+    <!-- <footer class="page-footer">
       <div class="main-footer-conteiner container">
         <div class="page-footer-container">
           <a class="foot-logo link" href="./index.html">WEB<span class="logo-part">Studio</span></a>
@@ -496,7 +501,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal window -->
 
