--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li class="menu-list-item"><a class="menu-list-link link" href="">Contacts</a></li>
           </ul>
         </nav>
-        <button class="mobile-menu" type="button">
+        <button class="mobile-menu-btn" type="button">
           <svg class="mobile-menu-icon" width="24" height="24" aria-label="mobile menu icon">
             <use href="./images/icons.svg#menu-icon"></use>
           </svg>
