--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               >
             </li>
             <li class="contact-list-item">
-              <a class="contact-list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="contact-list-link link" href="tel:+380961111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
