--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
     <main class="main-info">
       <!--- Hero sections -->
 
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-align">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button button" type="button">Order now</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Benefits section -->
 
