--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <!-- Benefits section -->
 
-      <!-- <section class="benefits">
+      <section class="benefits">
         <div class="container benefits-container">
           <h2 class="benefit-title visually-hidden">Benefits</h2>
           <ul class="benefits-list list">
@@ -123,7 +123,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Team section -->
 
