--- a/index.html
+++ b/index.html
@@ -127,17 +127,16 @@
 
       <!-- Team section -->
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container team-align">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-member">
               <img
                 class="member-picture"
+                srcset="./images/employees/product-designer@2x.jpg 2x"
                 src="./images/employees/product-designer.jpg"
                 alt="Product Designer"
-                width="264"
-                height="270"
               />
               <div class="cart-description">
                 <h3 class="team-members-name">Mark Guerrero</h3>
@@ -178,10 +177,9 @@
             <li class="team-member">
               <img
                 class="member-picture"
+                srcset="./images/employees/frontend-developer@2x.jpg 2x"
                 src="./images/employees/frontend-developer.jpg"
                 alt="Frontend Developer"
-                width="264"
-                height="270"
               />
               <div class="cart-description">
                 <h3 class="team-members-name">Tom Ford</h3>
@@ -221,10 +219,9 @@
             <li class="team-member">
               <img
                 class="member-picture"
+                srcset="./images/employees/marketing@2x.jpg 2x"
                 src="./images/employees/marketing.jpg"
                 alt="Marketing"
-                width="264"
-                height="270"
               />
               <div class="cart-description">
                 <h3 class="team-members-name">Camila Garcia</h3>
@@ -264,10 +261,9 @@
             <li class="team-member">
               <img
                 class="member-picture"
+                srcset="./images/employees/ui-designer@2x.jpg 2x"
                 src="./images/employees/ui-designer.jpg"
                 alt="UI Designer"
-                width="264"
-                height="270"
               />
               <div class="cart-description">
                 <h3 class="team-members-name">Daniel Wilson</h3>
@@ -306,7 +302,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Section portfolio-->
 
