--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
       <!-- Section portfolio-->
 
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container portfolio-align">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list list">
@@ -314,10 +314,17 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-picture"
-                  src="./images/services/banking-app.jpg"
+                  srcset="
+                    /images/services/banking-app-mobile.jpg    288w,
+                    /images/services/banking-app-mobile@2x.jpg 566w,
+                    /images/services/banking-app-tablet.jpg    356w,
+                    /images/services/banking-app-tablet@2x.jpg 712w,
+                    /images/services/banking-app.jpg           360w,
+                    /images/services/banking-app@2x.jpg        720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/services/banking-app-mobile.jpg"
                   alt="Banking App"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -334,10 +341,17 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-picture"
-                  src="./images/services/cashless-payment.jpg"
+                  srcset="
+                    /images/services/cashless-payment-mobile.jpg    288w,
+                    /images/services/cashless-payment-mobile@2x.jpg 566w,
+                    /images/services/cashless-payment-tablet.jpg    356w,
+                    /images/services/cashless-payment-tablet@2x.jpg 712w,
+                    /images/services/cashless-payment.jpg           360w,
+                    /images/services/cashless-payment@2x.jpg        720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/services/cashless-payment-mobile.jpg"
                   alt="Cashless payment"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -353,10 +367,17 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-picture"
-                  src="./images/services/meditation-app.jpg"
+                  srcset="
+                    /images/services/meditation-app-mobile.jpg    288w,
+                    /images/services/meditation-app-mobile@2x.jpg 566w,
+                    /images/services/meditation-app-tablet.jpg    356w,
+                    /images/services/meditation-app-tablet@2x.jpg 712w,
+                    /images/services/meditation-app.jpg           360w,
+                    /images/services/meditation-app@2x.jpg        720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/services/meditation-app-mobile.jpg"
                   alt="Meditation App"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -372,7 +393,16 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-picture"
-                  src="./images/services/taxi-service.jpg"
+                  srcset="
+                    /images/services/taxi-service-mobile.jpg    288w,
+                    /images/services/taxi-service-mobile@2x.jpg 566w,
+                    /images/services/taxi-service-tablet.jpg    356w,
+                    /images/services/taxi-service-tablet@2x.jpg 712w,
+                    /images/services/taxi-service.jpg           360w,
+                    /images/services/taxi-service@2x.jpg        720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/services/taxi-service-mobile.jpg"
                   alt="Taxi service"
                   width="360"
                   height="300"
@@ -391,10 +421,17 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-picture"
-                  src="./images/services/screen-illustration.jpg"
+                  srcset="
+                    /images/services/screen-illustration-mobile.jpg    288w,
+                    /images/services/screen-illustration-mobile@2x.jpg 566w,
+                    /images/services/screen-illustration-tablet.jpg    356w,
+                    /images/services/screen-illustration-tablet@2x.jpg 712w,
+                    /images/services/screen-illustration.jpg           360w,
+                    /images/services/screen-illustration@2x.jpg        720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/services/screen-illustration-mobile.jpg"
                   alt="Screen illustration"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -410,10 +447,17 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-picture"
-                  src="./images/services/online-courses.jpg"
+                  srcset="
+                    /images/services/online-courses-mobile.jpg    288w,
+                    /images/services/online-courses-mobile@2x.jpg 566w,
+                    /images/services/online-courses-tablet.jpg    356w,
+                    /images/services/online-courses-tablet@2x.jpg 712w,
+                    /images/services/online-courses.jpg           360w,
+                    /images/services/online-courses@2x.jpg        720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                  src="./images/services/online-courses-mobile.jpg"
                   alt="Online courses"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -427,7 +471,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--Footer-->
