--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
                 <img
                   class="portfolio-picture"
                   srcset="
-                    /images/services/cashless-payment-mobile.jpg    288w,
-                    /images/services/cashless-payment-mobile@2x.jpg 576w,
-                    /images/services/cashless-payment-tablet.jpg    356w,
-                    /images/services/cashless-payment-tablet@2x.jpg 712w,
-                    /images/services/cashless-payment.jpg           360w,
-                    /images/services/cashless-payment@2x.jpg        720w
+                    ./images/services/cashless-payment-mobile.jpg    288w,
+                    ./images/services/cashless-payment-mobile@2x.jpg 576w,
+                    ./images/services/cashless-payment-tablet.jpg    356w,
+                    ./images/services/cashless-payment-tablet@2x.jpg 712w,
+                    ./images/services/cashless-payment.jpg           360w,
+                    ./images/services/cashless-payment@2x.jpg        720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/cashless-payment-mobile.jpg"
@@ -368,12 +368,12 @@
                 <img
                   class="portfolio-picture"
                   srcset="
-                    /images/services/meditation-app-mobile.jpg    288w,
-                    /images/services/meditation-app-mobile@2x.jpg 576w,
-                    /images/services/meditation-app-tablet.jpg    356w,
-                    /images/services/meditation-app-tablet@2x.jpg 712w,
-                    /images/services/meditation-app.jpg           360w,
-                    /images/services/meditation-app@2x.jpg        720w
+                    ./images/services/meditation-app-mobile.jpg    288w,
+                    ./images/services/meditation-app-mobile@2x.jpg 576w,
+                    ./images/services/meditation-app-tablet.jpg    356w,
+                    ./images/services/meditation-app-tablet@2x.jpg 712w,
+                    ./images/services/meditation-app.jpg           360w,
+                    ./images/services/meditation-app@2x.jpg        720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/meditation-app-mobile.jpg"
@@ -394,12 +394,12 @@
                 <img
                   class="portfolio-picture"
                   srcset="
-                    /images/services/taxi-service-mobile.jpg    288w,
-                    /images/services/taxi-service-mobile@2x.jpg 576w,
-                    /images/services/taxi-service-tablet.jpg    356w,
-                    /images/services/taxi-service-tablet@2x.jpg 712w,
-                    /images/services/taxi-service.jpg           360w,
-                    /images/services/taxi-service@2x.jpg        720w
+                    ./images/services/taxi-service-mobile.jpg    288w,
+                    ./images/services/taxi-service-mobile@2x.jpg 576w,
+                    ./images/services/taxi-service-tablet.jpg    356w,
+                    ./images/services/taxi-service-tablet@2x.jpg 712w,
+                    ./images/services/taxi-service.jpg           360w,
+                    ./images/services/taxi-service@2x.jpg        720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/taxi-service-mobile.jpg"
@@ -420,12 +420,12 @@
                 <img
                   class="portfolio-picture"
                   srcset="
-                    /images/services/screen-illustration-mobile.jpg    288w,
-                    /images/services/screen-illustration-mobile@2x.jpg 576w,
-                    /images/services/screen-illustration-tablet.jpg    356w,
-                    /images/services/screen-illustration-tablet@2x.jpg 712w,
-                    /images/services/screen-illustration.jpg           360w,
-                    /images/services/screen-illustration@2x.jpg        720w
+                    ./images/services/screen-illustration-mobile.jpg    288w,
+                    ./images/services/screen-illustration-mobile@2x.jpg 576w,
+                    ./images/services/screen-illustration-tablet.jpg    356w,
+                    ./images/services/screen-illustration-tablet@2x.jpg 712w,
+                    ./images/services/screen-illustration.jpg           360w,
+                    ./images/services/screen-illustration@2x.jpg        720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/screen-illustration-mobile.jpg"
@@ -446,12 +446,12 @@
                 <img
                   class="portfolio-picture"
                   srcset="
-                    /images/services/online-courses-mobile.jpg    288w,
-                    /images/services/online-courses-mobile@2x.jpg 576w,
-                    /images/services/online-courses-tablet.jpg    356w,
-                    /images/services/online-courses-tablet@2x.jpg 712w,
-                    /images/services/online-courses.jpg           360w,
-                    /images/services/online-courses@2x.jpg        720w
+                    ./images/services/online-courses-mobile.jpg    288w,
+                    ./images/services/online-courses-mobile@2x.jpg 576w,
+                    ./images/services/online-courses-tablet.jpg    356w,
+                    ./images/services/online-courses-tablet@2x.jpg 712w,
+                    ./images/services/online-courses.jpg           360w,
+                    ./images/services/online-courses@2x.jpg        720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/online-courses-mobile.jpg"
