--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     ./images/services/cashless-payment-tablet.jpg    356w,
                     ./images/services/cashless-payment-tablet@2x.jpg 712w,
                     ./images/services/cashless-payment.jpg           360w,
-                    ./images/services/cashless-payment@2x.jpg        720w
+                    ./images/services/cashless-payment2x.jpg         720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/cashless-payment-mobile.jpg"
