--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
     <!--Footer-->
 
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="main-footer-conteiner container">
         <div class="page-footer-container">
           <a class="foot-logo link" href="./index.html">WEB<span class="logo-part">Studio</span></a>
@@ -539,7 +539,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal window -->
 
