--- a/index.html
+++ b/index.html
@@ -644,5 +644,70 @@
         </form>
       </div>
     </div>
+    <!-- Modal window -->
+
+    <div class="modal-mobile-menu is-open">
+      <button class="mobile-menumobile-menu-close-button">
+        <svg
+          class="mobile-menu-close-icon"
+          width="24"
+          height="24"
+          aria-label="mobile menu close icon"
+        >
+          <use href="./images/icons.svg#cross"></use>
+        </svg>
+      </button>
+      <nav class="navigation-mobile">
+        <ul class="navigation-mobile-list list">
+          <li class="navigation-mobile-item">
+            <a class="navigation-mobile-link link" href=""></a>Studio
+          </li>
+          <li class="navigation-mobile-item">
+            <a class="navigation-mobile-link link" href="">Portfolio</a>
+          </li>
+          <li class="navigation-mobile-item">
+            <a class="navigation-mobile-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="mobile-address">
+        <ul class="mobile-address-list list">
+          <li class="mobile-address-list-item"></li>
+          <li class="mobile-address-list-item"></li>
+        </ul>
+      </address>
+      <div class="mobile-menu-social-conteiner">
+        <ul class="mobile-menu-list list">
+          <li class="mobile-menu-list-item">
+            <a class="mobile-menu-list-link" href=""
+              ><svg class="mobile-menu-svg" width="24" height="24">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-list-item">
+            <a class="mobile-menu-list-link" href=""
+              ><svg class="mobile-menu-svg" width="24" height="24">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-list-item">
+            <a class="mobile-menu-list-link" href=""
+              ><svg class="mobile-menu-svg" width="24" height="24">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-list-item">
+            <a class="mobile-menu-list-link" href=""
+              ><svg class="mobile-menu-svg" width="24" height="24">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
