--- a/index.html
+++ b/index.html
@@ -647,61 +647,70 @@
     <!-- Modal window -->
 
     <div class="modal-mobile-menu is-open">
-      <button class="mobile-menumobile-menu-close-button">
+      <button class="mobile-menu-menu-close-button">
         <svg
           class="mobile-menu-close-icon"
-          width="24"
-          height="24"
+          width="8"
+          height="8"
           aria-label="mobile menu close icon"
         >
           <use href="./images/icons.svg#cross"></use>
         </svg>
       </button>
-      <nav class="navigation-mobile">
-        <ul class="navigation-mobile-list list">
-          <li class="navigation-mobile-item">
-            <a class="navigation-mobile-link link" href=""></a>Studio
-          </li>
-          <li class="navigation-mobile-item">
-            <a class="navigation-mobile-link link" href="">Portfolio</a>
-          </li>
-          <li class="navigation-mobile-item">
-            <a class="navigation-mobile-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="mobile-address">
-        <ul class="mobile-address-list list">
-          <li class="mobile-address-list-item"></li>
-          <li class="mobile-address-list-item"></li>
-        </ul>
-      </address>
-      <div class="mobile-menu-social-conteiner">
-        <ul class="mobile-menu-list list">
-          <li class="mobile-menu-list-item">
-            <a class="mobile-menu-list-link" href=""
-              ><svg class="mobile-menu-svg" width="24" height="24">
+      <div class="mobile-nav-container">
+        <nav class="navigation-mobile">
+          <ul class="navigation-mobile-list list">
+            <li class="navigation-mobile-item">
+              <a class="navigation-mobile-link link" href="">Studio</a>
+            </li>
+            <li class="navigation-mobile-item">
+              <a class="navigation-mobile-link link" href="">Portfolio</a>
+            </li>
+            <li class="navigation-mobile-item">
+              <a class="navigation-mobile-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="mobile-social-conteiner">
+        <address class="mobile-address">
+          <ul class="mobile-address-list list">
+            <li class="mobile-address-list-item">
+              <a class="mobile-address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="mobile-address-list-item">
+              <a class="mobile-address-link link" href="tel:+380961111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+        <ul class="mobile-social-list list">
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-svg" width="24" height="24">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="mobile-menu-list-item">
-            <a class="mobile-menu-list-link" href=""
-              ><svg class="mobile-menu-svg" width="24" height="24">
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-svg" width="24" height="24">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="mobile-menu-list-item">
-            <a class="mobile-menu-list-link" href=""
-              ><svg class="mobile-menu-svg" width="24" height="24">
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-svg" width="24" height="24">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="mobile-menu-list-item">
-            <a class="mobile-menu-list-link" href=""
-              ><svg class="mobile-menu-svg" width="24" height="24">
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-svg" width="24" height="24">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
