--- a/index.html
+++ b/index.html
@@ -644,9 +644,12 @@
         </form>
       </div>
     </div>
-    <!-- Modal window -->
 
-    <div class="modal-mobile-menu is-open">
+    <!-- Mobile modal window with navigation -->
+
+    <!-- is-open -->
+
+    <div class="modal-mobile-menu">
       <button class="mobile-menu-menu-close-button">
         <svg
           class="mobile-menu-close-icon"
@@ -718,5 +721,7 @@
         </ul>
       </div>
     </div>
+
+    <!-- Mobile modal window with inputs -->
   </body>
 </html>
