--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
     <!-- backdrop-on" -->
 
-    <div class="backdrop">
+    <div class="backdrop backdrop-on">
       <div class="modal-window">
         <!-- Кнопка закриття -->
 
