--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <!--Footer-->
 
     <footer class="page-footer">
-      <div class="main-footer-conteiner container">
+      <div class="main-footer-container container">
         <div class="page-footer-container">
           <a class="foot-logo link" href="./index.html">WEB<span class="logo-part">Studio</span></a>
           <p class="foot-text">
