--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
                 <img
                   class="portfolio-picture"
                   srcset="
-                    /images/services/banking-app-mobile.jpg    288w,
-                    /images/services/banking-app-mobile@2x.jpg 566w,
-                    /images/services/banking-app-tablet.jpg    356w,
-                    /images/services/banking-app-tablet@2x.jpg 712w,
-                    /images/services/banking-app.jpg           360w,
-                    /images/services/banking-app@2x.jpg        720w
+                    ./images/services/banking-app-mobile.jpg    288w,
+                    ./images/services/banking-app-mobile@2x.jpg 566w,
+                    ./images/services/banking-app-tablet.jpg    356w,
+                    ./images/services/banking-app-tablet@2x.jpg 712w,
+                    ./images/services/banking-app.jpg           360w,
+                    ./images/services/banking-app@2x.jpg        720w
                   "
                   sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/services/banking-app-mobile.jpg"
