--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             growth solutions.
           </p>
         </div>
-        <div class="footer-social-conteiner">
+        <div class="footer-social-container">
           <p class="footer-text-social">Social media</p>
           <ul class="footer-social-list list">
             <li class="footer-social-list-item">
